Updated to new commmadns

--- a/Information Theory/extra/Bib/papers.bib
+++ b/Information Theory/extra/Bib/papers.bib
@@ -7,6 +7,7 @@
     pages   = {379--423},
     year    = {1948}
 }
+
 @article{huffman1952,
     title   = {A Method for the Construction of Minimum-Redundancy Codes},
     author  = {Huffman, David A.},
@@ -16,7 +17,6 @@
     pages   = {1098--1101},
     year    = {1952}
 }
-
 
 @article{elias1975,
     title   = {Universal Codeword Sets and Representations of the Integers},
@@ -36,4 +36,32 @@
     number  = {3},
     pages   = {407--430},
     year    = {2001}
+}
+
+@article{karkkainen2006,
+    title   = {Linear work suffix array construction},
+    author  = {K\"arkk\"ainen, Sanders and Burkhardt},
+    journal = {Journal of the ACM},
+    volume  = {53},
+    number  = {6},
+    pages   = {918--936},
+    year    = {2006}
+}
+
+@article{ko2011,
+    title   = {Space efficient linear time construction of suffix array},
+    author  = {Ko and Aluru},
+    journal = {IEEE Transactions on Computers},
+    volume  = {3},
+    number  = {2},
+    pages   = {1471--1484},
+    year    = {2011},
+}
+
+@article{baier2016,
+    title   = {Linear--time Suffix Sorting -- A New Approach for Suffix Array Construction},
+    author  = {Baier, Uwe},
+    journal = {CPM},
+    volume  = {23},
+    year    = {2016}
 }
