--- a/Information Theory/main/Information_Theory.tex
+++ b/Information Theory/main/Information_Theory.tex
@@ -8,11 +8,12 @@
 \newacronym{acl}{ACL}{average code length}
 \newacronym{ac}{AC}{aritmethic coding}
 \newacronym{bwt}{BWT}{Burrows-Wheeler Transform}
+\newacronym{sa}{SA}{suffix array}
 
 \begin{document}
     \maketitle{Information Theory notes}{Riccardo Lo Iacono}{Unipa}
 
-    \section{Basics of information theory}
+    \section{Basics of information theory} 
     \subfile{../sections/simple/1 - Basics of IT}
 
     \section{Huffman encoding}
@@ -26,6 +27,9 @@
 
     \section{Compression optimization}
     \subfile{../sections/simple/5 - Compression optimization}
+
+    \section{Dictionary based compressors}
+    \subfile{../sections/simple/6 - Dictionary based compressors}
     \clearpage\printbibliography
     \clearpage\printglossaries
 \end{document}
