--- a/Information Theory/sections/simple/2 - Huffman encoding.tex
+++ b/Information Theory/sections/simple/2 - Huffman encoding.tex
@@ -15,7 +15,7 @@
                 the shortes codewords are associated to the symbols with the higtest
                 probability. This means that 
                 \[
-                   p_{i} \ge p_{j} \implies \Abs{c_{i}} \le \Abs{c_{j}}
+                    p_{i} \ge p_{j} \implies \abs[c_{i}] \le \abs[c_{j}]
                 \]
                 If this was not the case, 
                 swapping the codewords would result in a code with a lower \gls{acl}.
