--- a/Information Theory/sections/simple/3 - Aritmethic coding.tex
+++ b/Information Theory/sections/simple/3 - Aritmethic coding.tex
@@ -7,7 +7,7 @@
         the efficiency and the redundancy of the code.
         Formally, we define the efficiency as 
         \[
-            \vartheta(C) = \frac{\Entropy[d]{S}}{L_{S}(C)}
+            \vartheta(C) = \frac{\entropy{S}[n]}{L_{S}(C)}
         \]
         which, from Shannon's theorem, is a value in the range \([0, 1]\).
         We define the redundancy of the code as 
