--- a/Information Theory/sections/simple/4 - Integer encoding.tex
+++ b/Information Theory/sections/simple/4 - Integer encoding.tex
@@ -3,7 +3,7 @@
     What happens when the source to encode uses positive integers as symbols?
         How can we find a universal representaion? 
         Meaning, how can we find a code that is prefix free,
-        and whose \gls{acl} is \BigO{\ln x}, for any \(x\).
+        and whose \gls{acl} is \bigO{\ln x}, for any \(x\).
 
     Can we still use the codes seen so far, or do we need new ones?
         The answer is we can do both depending on the case.
