--- a/Information Theory/sections/sub/1.2 - Codes and Sardinas-Patterson algorithm.tex
+++ b/Information Theory/sections/sub/1.2 - Codes and Sardinas-Patterson algorithm.tex
@@ -43,7 +43,7 @@
 
     \subsubsection{Sardinas-Patterson algorithm}
     \subfile{../subsub/1.2.2 - Sardina-Patterson}
-
-    \subsubsection{Prefix codes}
-    \subfile{../subsub/1.2.3 - Prefix codes}
+    %
+    % \subsubsection{Prefix codes}
+    % \subfile{../subsub/1.2.3 - Prefix codes}
 \end{document}
