--- a/Information Theory/sections/sub/4.2 - Elias codes.tex
+++ b/Information Theory/sections/sub/4.2 - Elias codes.tex
@@ -7,8 +7,8 @@
     Before we start talking about the codes,
         let us define some notation useful to understand what follows.
         Let \(x \text{ be an Integer, and let } B(x)\) be its binary representation.
-        We define \(\Abs{B(x)}\) as the number of bits needed to represent \(x\).
-        \note{One can also think of \(\Abs{B(x)}\) as the length of \(B(x)\)}
+        We define \(\abs[B(x)]\) as the number of bits needed to represent \(x\).
+        \note{One can also think of \(\abs[B(x)]\) as the length of \(B(x)\)}
 
     \subsubsection{Gamma code}
     \subfile{../subsub/4.2.1 - Gamma code}
