--- a/Information Theory/sections/sub/5.2 - Analysis of BWT.tex
+++ b/Information Theory/sections/sub/5.2 - Analysis of BWT.tex
@@ -8,14 +8,14 @@
         Even though the paper referes just to the 0-th order empirical entropy,
         defined as follow,
         \[
-            \Entropy[0]{s} = - \sum_{c \in \Sigma}
+            \entropy{s}[0] = - \sum_{c \in \Sigma}
                 \frac{n_{c}}{n} \log \frac{n_{c}}{n}  
         \]
         where \(n_{c}\) is the number of occurences of \(c \text{ in } s\);
         one could generalize the idea to a k-th order empirical entropy as follow
         \begin{equation}\label{Eq:2}
-            \Entropy[k]{s} = \frac{1}{\Abs{s}} 
-                \sum_{w \in \Sigma^{k}} \Abs{w_{s}} \Entropy[0]{w_{s}}
+            \entropy{s}[k] = \frac{1}{\abs[s]} 
+                \sum_{w \in \Sigma^{k}} \abs[w_{s}] \entropy{w_{s}}[0]
         \end{equation}
         where \(w_{s}\) is the concatenation of symbols that follow \(w \text{ in } s\).
 
@@ -24,19 +24,19 @@
             For any string \(s\) over some alphabet \(\Sigma\) and for any \(k \ge 0\),
             it holds that 
             \[
-                BW_{0} = \le 8 \Abs{s} \Entropy[k]{s} +
-                    \left\lparen \mu + \frac{2}{25} \right\rparen \Abs{s} + 
+                BW_{0} = \le 8 \abs[s] \entropy{s}[k] +
+                    \left\lparen \mu + \frac{2}{25} \right\rparen \abs[s] + 
                     h^{k} (2h \log h + 9)
             \]
-            where \(h = \Abs{\Sigma} \text{ and } \mu = 1\).
+            where \(h = \abs[\Sigma] \text{ and } \mu = 1\).
         \end{theorem*}
-        Let us point out that \(BW_{0} = Order-0 + MTF + BWT\), 
-        where \(Order-0\) is some 0-order compressor.
+        Let us point out that \(BW_{0} = Order_{0} + MTF + BWT\), 
+        where \(Order_{0}\) is some 0-order compressor.
         \begin{theorem*}
             For any string \(s\) over some alphabet \(\Sigma\) and for any \(k \ge 0\),
             there exists some constant \(g_{k}\), such that it holds
             \[
-                BW_{0} + RL \le (5 + 3\mu)\Abs{s} H_{k}^{*}(s) + g_{k}
+                BW_{0} + RL \le (5 + 3\mu)\abs[s] H_{k}^{*}(s) + g_{k}
             \]
             where \(RL\) is the run length encoding of the string.
         \end{theorem*}
@@ -44,8 +44,11 @@
         To conclude this section, 
             let us observe that the bottleneck of the BWT is
             given by the sorting of the cyclic rotations.
-            We should show, in the following sections, 
+            We should show, in the following section, 
             that the problem can be reduced to the sorting of suffixes.
         \footnotetext[4]{Due to the way it's defined, see \eqref{Eq:2},
         empirical entropy is perfect for a worst-case analysis.}
+
+        \subsubsection{Efficient computation of the BWT}
+        \subfile{../subsub/5.2.1 - Efficient BWT computation}
 \end{document}
