--- a/Information Theory/sections/subsub/1.2.3 - Prefix codes.tex
+++ b/Information Theory/sections/subsub/1.2.3 - Prefix codes.tex
@@ -1,7 +1,7 @@
 \documentclass{subfiles}
 \begin{document}
     Let's look back at the example of \emph{Section \ref{Sec:1.2.1}}. 
-    Given the codewords \(\Set{0, 1, 01, 11}\) for the source symbol \(s_{1},
+    Given the codewords \(\set{0, 1, 01, 11}\) for the source symbol \(s_{1},
     s_{2}, s_{3}, s_{4}\) respectively, how should we decode the string \(000111\)?
     As said before, unless some context is given, we can't be sure.
 
