--- a/Information Theory/sections/subsub/1.3.2 - Optimal codes and SF encoding.tex
+++ b/Information Theory/sections/subsub/1.3.2 - Optimal codes and SF encoding.tex
@@ -15,8 +15,8 @@
     is almost equal, encode the symbols in the first set with 0 and the other with 1.
     Lastly, repeat the procedure for each set recursively.
     \begin{example*}
-        Let's assume the alphabet \(\Set{a, b, c, d, e}\) whose probabilities are
-            \(\Set{\tfrac{1}{2}, \tfrac{1}{4}, \tfrac{1}{8},
+        Let's assume the alphabet \(\set{a, b, c, d, e}\) whose probabilities are
+            \(\set{\tfrac{1}{2}, \tfrac{1}{4}, \tfrac{1}{8},
                 \tfrac{1}{16}, \tfrac{1}{16}}\). 
             Applying the steps above we get the codes shown in the table below. 
             \subfile{../../extra/TikZ/Tab * - Example of SF encoding}
