--- a/Information Theory/sections/subsub/2.1.3 - Huffman exercises.tex
+++ b/Information Theory/sections/subsub/2.1.3 - Huffman exercises.tex
@@ -10,9 +10,9 @@
     \end{exercise}
     \begin{exercise}\label{Exe:2}
         Determine which of the following is the Huffman tree for the source 
-            \(S = \Set{a, b, c, d, e}\) whose probabilities are,
+            \(S = \set*{a, b, c, d, e}\) whose probabilities are,
         respectively, the following: 
-            \(\Set{\tfrac{1}{4}, 
+            \(\set*{\tfrac{1}{4}, 
                 \tfrac{1}{2},
                 \tfrac{1}{16}, 
                 \tfrac{1}{8}, 
