--- a/Information Theory/sections/subsub/4.2.2 - Delta code.tex
+++ b/Information Theory/sections/subsub/4.2.2 - Delta code.tex
@@ -3,7 +3,7 @@
     Let \(x\) be a positive Integer, 
         its delta code (\(\delta(x)\)) is a binary sequence composed by:
         \begin{itemize}
-            \item the delta code of \(\Abs{B(x)}\)
+            \item the delta code of \(\abs{B(x)}\)
             \item the binary representation of \(x\) excluding the most significant bit
         \end{itemize}
 
@@ -12,7 +12,7 @@
             \[
                 \delta(x) = 001 00 011
             \]
-        where \(00100\) is the gamma encoding of \(\Abs{B(x)}\) and 
+        where \(00100\) is the gamma encoding of \(\abs{B(x)}\) and 
             \(011\) the binary encoding of \(x\), most significant bit excluded.
     \end{example*}
     
