--- a/Information Theory/extra/TikZ/Figure 6 - Adaptive AC decoding.tex
+++ b/Information Theory/extra/TikZ/Figure 6 - Adaptive AC decoding.tex
@@ -1,6 +1,6 @@
 \documentclass{subfiles}
 \begin{document}
-    \begin{figure}[!hb]
+    \begin{figure}[!h]
         \centering
         \begin{tikzpicture}[scale=0.925]
 
