--- a/Information Theory/sections/sub/1.1 - Shannon entropy.tex
+++ b/Information Theory/sections/sub/1.1 - Shannon entropy.tex
@@ -43,10 +43,10 @@
     As we will show in \emph{Section \ref{Sec:1.1.1}}, 
         the only form \(H\) can assume is the following:
     \begin{equation}\label{Eq:1}
-        H = -K \sum_{i = 1}^{n = \Abs{\Sigma}}{p_{i} \log_{b} p_{i}}.
+        H = -K \sum_{i = 1}^{n = \abs[\Sigma]}{p_{i} \log_{b} p_{i}}.
     \end{equation}
     where \(K\) is a positive constant and \(b \text{ is usually } 2\).
- 
+
     \note{
         In this context, 
         by ``event'' we refer to the symbol produced by the source at a given time.
