--- a/Information Theory/sections/sub/3.4 - AC exercises.tex
+++ b/Information Theory/sections/sub/3.4 - AC exercises.tex
@@ -6,13 +6,12 @@
             \begin{enumerate}
                 \item \(\omega_{0} = acabba\)
                 \item \(\omega_{1} = aabbca\)
-                \item \(\omega_{2} = 100010010\)
             \end{enumerate}
     \end{exercise}
 
     \begin{exercise}
         Decode the following texts, encoded using the adaptive \gls{ac} encoding.
-        Assume the alphabet to be \(\Set{a, b, c, d}\).
+        Assume the alphabet to be \(\set{a, b, c, d}\).
         \begin{enumerate}
             \item \(s_{0} = 0.456731 \text{, with } n = 4\).
             \item \(s_{1} = 0.123 \text{, with } n = 10\).
