--- a/Information Theory/sections/subsub/1.3.1 - Kraft-McMillan.tex
+++ b/Information Theory/sections/subsub/1.3.1 - Kraft-McMillan.tex
@@ -5,8 +5,8 @@
     We now provide a necessary and sufficient condition for the existence of 
     a prefix code: the \emph{Kraft-McMillan inequality}.
     \begin{theorem}[Kraft-McMillan]\label{Thm:2}
-        Let \(S = \Set{s_{1}, \ldots, s_{n}}\) be a source alphabet
-        and \(X =\Set{x_{1}, \ldots, x_{d}}\) a code alphabet.
+        Let \(S = \set{s_{1}, \ldots, s_{n}}\) be a source alphabet
+        and \(X =\set{x_{1}, \ldots, x_{d}}\) a code alphabet.
         Let \(l_{1}, \ldots, l_{n}\) be a set of lengths.
         Then, necessary and sufficient condition for the existence of a 
         prefix-free code \(C\) over the alphabet \(X\) with codewords lenghts 
