--- a/Information Theory/sections/subsub/2.1.1 - Huffman encoding.tex
+++ b/Information Theory/sections/subsub/2.1.1 - Huffman encoding.tex
@@ -17,8 +17,8 @@
         \begin{example*}
             To ease things out, the example skips the scanning step.
 
-            Let \(S = \Set{a, b, c, d, e}\) whose probabilities are
-            \(\Set{\tfrac{1}{3}, \tfrac{1}{6}, \tfrac{1}{3},
+            Let \(S = \set{a, b, c, d, e}\) whose probabilities are
+            \(\set*{\tfrac{1}{3}, \tfrac{1}{6}, \tfrac{1}{3},
             \tfrac{1}{12}, \tfrac{1}{12}}\), respectively. 
             Applying the steps above we have the following.
             \begin{description}
@@ -44,8 +44,8 @@
                     \subfile{../../extra/TikZ/Figure 1 - Example of Huffman encoding}
 
                 \item [\textbf{Step 3.}] Traversing the tree we get 
-                    \(C = \Set{0, 10, 110, 1110, 1111}\) for tree in 
-                    \emph{Figure \ref{Fig:2.a}} or \(C = \Set{00, 01, 10, 110, 111}\)
+                    \(C = \set{0, 10, 110, 1110, 1111}\) for tree in 
+                    \emph{Figure \ref{Fig:2.a}} or \(C = \set{00, 01, 10, 110, 111}\)
                     for the one in \emph{Figure \ref{Fig:2.b}}.
             \end{description}   
         \end{example*}
