Completed section 5; fixed Bib with respect to DBLP

--- a/Information Theory/extra/Bib/papers.bib
+++ b/Information Theory/extra/Bib/papers.bib
@@ -1,11 +1,12 @@
 @article{shannon1948,
-    title   = {A Mathematical Theory of Communication},
-    author  = {Shannon, Claude E.},
-    journal = {Bell System Technical Journal},
-    volume  = {27},
-    number  = {3},
-    pages   = {379--423},
-    year    = {1948}
+  author       = {Claude E. Shannon},
+  title        = {A mathematical theory of communication},
+  journal      = {Bell Syst. Tech. J.},
+  volume       = {27},
+  number       = {3},
+  pages        = {379--423},
+  year         = {1948},
+  doi          = {10.1002/J.1538-7305.1948.TB01338.X},
 }
 
 @article{huffman1952,
@@ -15,7 +16,8 @@
     volume  = {40},
     number  = {9},
     pages   = {1098--1101},
-    year    = {1952}
+    year    = {1952},
+    doi = {10.1007/bf02837279},
 }
 
 @article{elias1975,
@@ -25,43 +27,42 @@
     volume  = {21},
     number  = {2},
     pages   = {194--203},
-    year    = {1975}
+    year    = {1975},
+    doi = {10.1109/tit.1975.1055349},
 }
 
 @article{manzini2001,
-    title   = {An analysis of the Burrows-Wheeler Transform},
-    author  = {Manzini, G},
-    journal = {Journal of the ACM},
-    volume  = {48},
-    number  = {3},
-    pages   = {407--430},
-    year    = {2001}
+  author       = {Giovanni Manzini},
+  title        = {An analysis of the Burrows-Wheeler transform},
+  journal      = {J. {ACM}},
+  volume       = {48},
+  number       = {3},
+  pages        = {407--430},
+  year         = {2001},
+  doi          = {10.1145/382780.382782},
 }
 
 @article{karkkainen2006,
-    title   = {Linear work suffix array construction},
-    author  = {K\"arkk\"ainen, Sanders and Burkhardt},
-    journal = {Journal of the ACM},
-    volume  = {53},
-    number  = {6},
-    pages   = {918--936},
-    year    = {2006}
+  author       = {Juha K{\"{a}}rkk{\"{a}}inen and
+                  Peter Sanders and
+                  Stefan Burkhardt},
+  title        = {Linear work suffix array construction},
+  journal      = {J. {ACM}},
+  volume       = {53},
+  number       = {6},
+  pages        = {918--936},
+  year         = {2006},
+  doi          = {10.1145/1217856.1217858},
 }
 
-@article{ko2011,
-    title   = {Space efficient linear time construction of suffix array},
-    author  = {Ko and Aluru},
-    journal = {IEEE Transactions on Computers},
-    volume  = {3},
-    number  = {2},
-    pages   = {1471--1484},
-    year    = {2011},
-}
-
-@article{baier2016,
-    title   = {Linear--time Suffix Sorting -- A New Approach for Suffix Array Construction},
-    author  = {Baier, Uwe},
-    journal = {CPM},
-    volume  = {23},
-    year    = {2016}
+@article{ko2005,
+  author       = {Pang Ko and
+                  Srinivas Aluru},
+  title        = {Space efficient linear time construction of suffix arrays},
+  journal      = {J. Discrete Algorithms},
+  volume       = {3},
+  number       = {2-4},
+  pages        = {143--156},
+  year         = {2005},
+  doi          = {10.1016/J.JDA.2004.08.002},
 }
