--- a/Information Theory/main/Information_Theory.tex
+++ b/Information Theory/main/Information_Theory.tex
@@ -1,5 +1,6 @@
 \documentclass[moon, colormath]{lectures2}
 
+\addbibresource{../extra/Bib/other.bib}
 \addbibresource{../extra/Bib/papers.bib}
 \addbibresource{../extra/Bib/reports.bib}
 
@@ -27,9 +28,9 @@
 
     \section{Compression optimization}
     \subfile{../sections/simple/5 - Compression optimization}
-
-    \section{Dictionary based compressors}
-    \subfile{../sections/simple/6 - Dictionary based compressors}
+    %
+    % \section{Dictionary based compressors}
+    % \subfile{../sections/simple/6 - Dictionary based compressors}
     \clearpage\printbibliography
     \clearpage\printglossaries
 \end{document}
