--- a/Information Theory/sections/sub/5.1 - BWT.tex
+++ b/Information Theory/sections/sub/5.1 - BWT.tex
@@ -12,13 +12,9 @@
 
     \begin{example*}
         Let \(\omega = aleph\). Its cyclic rotations, already sorted, are
-        \[\begin{aligned}
-            & aleph \\ 
-            & ephal \\
-            & halep \\
-            & lepha \\
-            & phale \\
-        \end{aligned}\]
+        \[
+            aleph \;, ephal\;, halep\;, lepha\;, phale 
+        \]
         Thus, we return the pair \((hlpae, 0)\).
     \end{example*}
 
